<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:context=".view.SignUpActivity">

        <ImageView
            android:id="@+id/imageView_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_logo"
            android:src="@drawable/ic_pokeball_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_signUp"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_logo" />

        <TextView
            android:id="@+id/textView_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/subtitle_signUp"
            android:textColor="@color/white"
            android:textSize="@dimen/subtitle_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_input"
            android:hint="@string/input_name"
            android:textColorHint="@color/white"
            app:hintTextColor="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_subtitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_input"
                android:inputType="text"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_input"
            android:hint="@string/input_email"
            android:textColorHint="@color/white"
            app:hintTextColor="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_input"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_input"
            android:hint="@string/input_password"
            android:textColorHint="@color/white"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:hintTextColor="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_input"
                android:inputType="textPassword"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_character_gender"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_input"
            android:hint="@string/input_character_gender"
            android:textColorHint="@color/white"
            app:endIconMode="dropdown_menu"
            app:endIconTint="@color/white"
            app:hintTextColor="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_password">

            <AutoCompleteTextView
                android:id="@+id/autoComplete_character_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_input"
                android:dropDownVerticalOffset="2dp"
                android:inputType="none"
                android:paddingStart="12dp"
                android:popupBackground="@drawable/background_input_white"
                android:textColor="@color/white"
                tools:ignore="LabelFor,RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_input"
            android:background="@drawable/background_button_none"
            android:clickable="false"
            android:text="@string/title_signUp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/button_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_character_gender" />

        <TextView
            android:id="@+id/textView_has_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_input"
            android:gravity="center"
            android:text="@string/has_account"
            android:textColor="@color/white"
            android:textSize="@dimen/subtitle_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_signUp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>